--- a/frontend/src/assets/styles/Components/Group/GroupPost.css
+++ b/frontend/src/assets/styles/Components/Group/GroupPost.css
@@ -41,7 +41,7 @@
 
 .group-post-header:hover .group-post-user-email {
 	text-decoration: none;
-	color: #17a2b8;
+	color: #007bff;
 }
 
 .group-post-header {
